--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-jamming-project",
+  "name": "react-spotify-playlist",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -34,6 +34,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "engines": {
+    "node": "18.18.0"
   }
 }
 
