--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
   },
   "engines": {
     "node": "18.18.0"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
-
